[package]
name    = "netmachines"
version = "0.1.0"
authors = ["Martin Hoffmann <hn@nvnc.de>"]

[lib]
name = "netmachines"
path = "src/lib.rs"

[[example]]
name = "pinkyd"
path = "examples/pinkyd.rs"

[dependencies]
log   = "0.3"
rotor = "0.6"

[dependencies.openssl]
version = "0.7"
optional = true

[dependencies.security-framework]
version = "0.1"
optional = true

[dev-dependencies]
argparse  = "0.2"
bytes     = "0.3"
simplelog = "0.1"

[features]
default = ["ssl"]
ssl = ["openssl"]
